force-app/main/default/objects/HoldingGroups__c/HoldingGroups__c.object-meta.xml
<CustomObject>
    <label>Holding Groups</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Holding Groups</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>