force-app/main/default/objects/HoldingGroups__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Holding Groups</relationshipLabel>
    <relationshipName>Holding_Groups</relationshipName>
    <type>Lookup</type>
</CustomField>