force-app/main/default/objects/HoldingGroups__c/fields/AccountRoleHolding__c.field-meta.xml
<CustomField>
    <fullName>AccountRoleHolding__c</fullName>
    <formula>IF(
AND(Account__r.IsHoldingHead__c=true,
Level__c = 3),
&apos;Holding Head&apos;, &apos;&apos;
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account Role</label>
    <type>Text</type>
</CustomField>