force-app/main/default/objects/HoldingGroups__c/fields/Parent__c.field-meta.xml
<CustomField>
    <fullName>Parent__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Holding Groups</label>
    <referenceTo>HoldingGroups__c</referenceTo>
    <relationshipLabel>Holding Groups</relationshipLabel>
    <relationshipName>Holding_Groups</relationshipName>
    <type>Lookup</type>
</CustomField>