force-app/main/default/objects/HoldingGroups__c/fields/ParentId__c.field-meta.xml
<CustomField>
    <fullName>ParentId__c</fullName>
    <label>Parent Id</label>
    <length>50</length>
    <type>Text</type>
</CustomField>